# vppp

./: .gitignore  CMakeLists.txt  README.md  images.qrc
src/: card.cpp  card.h  displayCard.h  game.h  games.h  hand.h  main.cpp  shuffle.h  videopoker.cpp  videopoker.h  videopoker.ui  vppp.cpp  vppp.h  vppp.ui
